[package]
name = "saenaegi"
version = "0.1.0"
authors = ["YujinGaya <yujin.gaya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
